# plugin-sdk-mingw

./: CMakeLists.txt
hooking/: Hooking.Patterns.cpp  Hooking.Patterns.h
injector/: assembly.hpp
plugin_sa/game_sa/: CPlaceable.cpp
shared/: Other.h
